Add GetEndedEventLists and add profie picture for GetPostById
