# backend/pkg/struct/post.go
@@ -8,6 +8,7 @@ type GetPostByIdResponse struct {
 	PostId            string  `json:"post_id" example:"1v6v1i1m0z0r1s1c2s1x3w3t4x1m1k1v6"`
 	UserId            string  `json:"user_id" example:"9e5d846e-8f41-4a6c-aa48-ecabdf4f0ac3"`
 	Username          string  `json:"username" example:"User001"`
+	UserImage         string  `json:"user_image"`
 	EventId           string  `json:"event_id" example:"b21d43c3-1a0a-4f36-b38b-81d0e57af681"`
 	Caption           *string `json:"caption" example:"Caption (Max Length 1000)"`
 	RatingScore       int     `json:"rating_score" example:"4"`
@@ -18,6 +19,7 @@ type PostList struct {
 	PostId            string  `json:"post_id" example:"1v6v1i1m0z0r1s1c2s1x3w3t4x1m1k1v6"`
 	UserId            string  `json:"user_id" example:"9e5d846e-8f41-4a6c-aa48-ecabdf4f0ac3"`
 	Username          string  `json:"username" example:"User001"`
+	UserImage         string  `json:"user_image" example:"picture123"`
 	EventId           string  `json:"event_id" example:"b21d43c3-1a0a-4f36-b38b-81d0e57af681"`
 	Caption           *string `json:"caption" example:"Caption (Max Length 1000)"`
 	RatingScore       int     `json:"rating_score" example:"4"`
