# backend/swagger/docs/swagger.json
@@ -468,6 +468,50 @@
                 }
             }
         },
+        "/events/end/{user_id}": {
+            "get": {
+                "description": "Get list of events that are ended by userid",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "events"
+                ],
+                "summary": "GetEndedEventLists",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/structure.GetEndedEventListsResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
         "/events/participant": {
             "get": {
                 "description": "Get list of all participant in the events",
@@ -3021,6 +3065,52 @@
                 }
             }
         },
+        "structure.GetEndedEventList": {
+            "type": "object",
+            "properties": {
+                "average_rate": {
+                    "type": "number"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "district": {
+                    "type": "string"
+                },
+                "end_date": {
+                    "type": "string"
+                },
+                "event_id": {
+                    "type": "string"
+                },
+                "event_image": {
+                    "type": "string"
+                },
+                "event_name": {
+                    "type": "string"
+                },
+                "start_date": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "structure.GetEndedEventListsResponse": {
+            "type": "object",
+            "properties": {
+                "event_lists": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/structure.GetEndedEventList"
+                    }
+                }
+            }
+        },
         "structure.GetEventDataByIdResponse": {
             "type": "object",
             "properties": {
@@ -3235,6 +3325,9 @@
                 "user_id": {
                     "type": "string",
                     "example": "9e5d846e-8f41-4a6c-aa48-ecabdf4f0ac3"
+                },
+                "user_image": {
+                    "type": "string"
                 },
                 "username": {
                     "type": "string",
@@ -3487,6 +3580,10 @@
                 "user_id": {
                     "type": "string",
                     "example": "9e5d846e-8f41-4a6c-aa48-ecabdf4f0ac3"
+                },
+                "user_image": {
+                    "type": "string",
+                    "example": "picture123"
                 },
                 "username": {
                     "type": "string",
